added some blocks

--- a/index.html
+++ b/index.html
@@ -15,16 +15,42 @@
 <style>
     .title {
       padding-bottom: .35em;
-      border-bottom: 1px solid var(--primary);
+      border-bottom: 1px solid ;
+      border-bottom-color: #07070aff;
+      font-size: 50px;
     }
    </style>
 </head>
-<body container-fluid>
-  <div class="text-white bg-dark d-flex align-items-center justify-content-center" style="height: 100vh">
-  <div class="text-center">
-  <img src="alden-skeie-cBx1EygM3BM-unsplash.jpg" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
-  <h3 class="mt-3 title">Nathan Davis</h3>
-</div>
-</div>
+<body >
+  <header class="container-fluid">
 
+  </header>
+  <main class="container-fluid">
+    <div class="row">
+    <div class=" col text-white cobalt d-flex align-items-center justify-content-center" style="height: 50vh">
+      <div class="text-center">
+        <h3 class="mt-3 title">Nathan Davis</h3>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class=" col text-white raisin d-flex align-items-center justify-content-center" style="height: 30vh">
+    </div>
+  </div>
+  <div class="row">
+    <div class=" col text-white raisin d-flex align-items-center justify-content-center" style="height: 30vh">
+    </div>
+  </div>
+  <div class="row">
+    <div class=" col text-white raisin d-flex align-items-center justify-content-center" style="height: 30vh">
+    </div>
+  </div>
+  <div class="row">
+    <div class=" col text-white raisin d-flex align-items-center justify-content-center" style="height: 30vh">
+    </div>
+  </div>
+  </main>
+<footer class="container-fluid">
+
+</footer>
 </body></html>
