--- a/index.html
+++ b/index.html
@@ -29,12 +29,33 @@
     <div class="row">
     <div class=" col text-white cobalt d-flex align-items-center justify-content-center" style="height: 50vh">
       <div class="text-center">
-        <h3 class="mt-3 title">Nathan Davis</h3>
+        <h1 class="mt-3 title">Nathan Davis</h1>
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class=" col text-white raisin d-flex align-items-center justify-content-center" style="height: 30vh">
+  <div class="row text-white raisin d-flex align-items-start justify-content-center" >
+    <div class="col">
+      <div class="row">
+        <div class="col" >
+            <div class="row text-center justify-content-between mt-3">
+              <h2 class="col text-center"> <span class=" bottom-border-cobalt"> Portfolio Applications</span></h2>
+            </div>
+        </div>
+      </div>
+      <div class="row raisin justify-content-around text-white text-center mt-3">
+        <div class="col-3 raisin">
+          <h4>Keepr</h4>
+        </div>
+        <div class="col-3 raisin">
+          <h3>QuestSeeker</h3>
+          <a href="https://questseeker.herokuapp.com/#/">
+            <img class="img-fluid" src="questseeker.png" alt="img not found">
+          </a>
+        </div>
+        <div class="col-3 raisin">
+          <h4>Kanban</h4>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
