--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       <div class="row raisin justify-content-around text-white text-center mt-3">
         <div class="col-3 raisin">
           <h4>Keepr</h4>
+          <a href="https://vaultkeeper.herokuapp.com/#/">
+            <img class="img-fluid" src="keepr.png" alt="img not found">
+          </a>
         </div>
         <div class="col-3 raisin">
           <h3>QuestSeeker</h3>
@@ -53,7 +56,9 @@
           </a>
         </div>
         <div class="col-3 raisin">
-          <h4>Kanban</h4>
+          <h4>Kanban</h4><a href="https://kanbandavis.herokuapp.com/#/">
+            <img class="img-fluid" src="kanban.png" alt="img not found">
+          </a>
         </div>
       </div>
     </div>
