Added about page

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             </div>
         </div>
       </div>
-      <div class="row raisin justify-content-around text-white text-center mt-3">
+      <div class="row raisin justify-content-around text-white text-center mt-3 mb-3">
         <div class="col-3 raisin">
-          <h4>Keepr</h4>
+          <h4 class="mb-3">Keepr</h4>
           <a href="https://vaultkeeper.herokuapp.com/#/">
             <img class="img-fluid" src="keepr.png" alt="img not found">
           </a>
@@ -64,7 +64,19 @@
     </div>
   </div>
   <div class="row">
-    <div class=" col text-white raisin d-flex align-items-center justify-content-center" style="height: 30vh">
+    <div class=" col text-white cobalt d-flex align-items-center justify-content-center " style="height: 50vh">
+      <div class="row justify-content-center">
+        <h3 class="col-12 text-center">
+          <span class="bottom-border-rich">About Me</span>
+        </h3>
+        <div class="row text-center">
+          <h5 class="col-6 offset-3 mt-3"> I have always had a passion for solving puzzles. In the past, I've struggled to find a field that utilizes this skill. I spent some time in the workforce hoping to learn, grow, and give myself time to find my desired career path. </h5>
+        </div>
+        <div class="row text-center mt-5">
+          <h5 class="col-6 offset-3">My time in these positions led to me deciding to pursue a career in software development. Software development allows me to utilize my natural ability to solve problems and to work in a space where I can be creative.</h5>
+        </div>
+      </div>
+      
     </div>
   </div>
   <div class="row">
