--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <meta name="google-signin-client_id" content="1022131043022-0kdnf081a4qptkirlr0nbto4359g82q0.apps.googleusercontent.com">
 <link rel="icon" href="https://bcw.blob.core.windows.net/public/img/9977764104160066">
 <title>CodeWorks Academy</title>
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Quicksand" rel="stylesheet">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
 <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Quicksand" rel="stylesheet">
 <link rel="stylesheet" href="https://bcw.blob.core.windows.net/public/bootstrap.min.css">
 <link rel="stylesheet" href="https://bcw.blob.core.windows.net/public/cw_theme.css">
@@ -81,6 +81,7 @@
   </div>
   <div class="row">
     <div class=" col text-white raisin d-flex align-items-center justify-content-center" style="height: 30vh">
+<button type="button" class="btn cobalt btn-lg text-white">Check out my Github!<a href="https://github.com/NathanDavis97"></a></button>
     </div>
   </div>
   <div class="row">
