--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en"><head>
+<html lang="en" class="overflow"><head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -27,7 +27,7 @@
   </header>
   <main class="container-fluid">
     <div class="row">
-    <div class=" col text-white cobalt d-flex align-items-center justify-content-center" style="height: 50vh">
+    <div class=" col text-white cobalt d-flex align-items-center justify-content-center" style="min-height: 50vh">
       <div class="text-center">
         <h1 class="mt-3 title">Nathan Davis</h1>
       </div>
@@ -43,19 +43,19 @@
         </div>
       </div>
       <div class="row raisin justify-content-around text-white text-center mt-3 mb-3">
-        <div class="col-3 raisin">
+        <div class="col-12 col-md-3 raisin">
           <h4 class="mb-3">Keepr</h4>
           <a href="https://vaultkeeper.herokuapp.com/#/">
             <img class="img-fluid" src="keepr.png" alt="img not found">
           </a>
         </div>
-        <div class="col-3 raisin">
+        <div class="col-12 col-md-3 raisin">
           <h3>QuestSeeker</h3>
           <a href="https://questseeker.herokuapp.com/#/">
             <img class="img-fluid" src="questseeker.png" alt="img not found">
           </a>
         </div>
-        <div class="col-3 raisin">
+        <div class="col-12 col-md-3 raisin">
           <h4>Kanban</h4><a href="https://kanbandavis.herokuapp.com/#/">
             <img class="img-fluid" src="kanban.png" alt="img not found">
           </a>
@@ -64,28 +64,45 @@
     </div>
   </div>
   <div class="row">
-    <div class=" col text-white cobalt d-flex align-items-center justify-content-center " style="height: 50vh">
+    <div class=" col text-white cobalt d-flex align-items-center justify-content-center " style="min-height: 50vh">
       <div class="row justify-content-center">
         <h3 class="col-12 text-center">
           <span class="bottom-border-rich">About Me</span>
         </h3>
         <div class="row text-center">
-          <h5 class="col-6 offset-3 mt-3"> I have always had a passion for solving puzzles. In the past, I've struggled to find a field that utilizes this skill. I spent some time in the workforce hoping to learn, grow, and give myself time to find my desired career path. </h5>
+          <h5 class="col-10 offset-1 col-md-6 offset-md-3 mt-3"> I have always had a passion for solving puzzles. In the past, I've struggled to find a field that utilizes this skill. I spent some time in the workforce hoping to learn, grow, and give myself time to find my desired career path. </h5>
         </div>
         <div class="row text-center mt-5">
-          <h5 class="col-6 offset-3">My time in these positions led to me deciding to pursue a career in software development. Software development allows me to utilize my natural ability to solve problems and to work in a space where I can be creative.</h5>
+          <h5 class="col-10 offset-1 col-md-6 offset-md-3">My time in these positions led to me deciding to pursue a career in software development. Software development allows me to utilize my natural ability to solve problems and to work in a space where I can be creative.</h5>
         </div>
       </div>
       
     </div>
   </div>
-  <div class="row">
-    <div class=" col text-white raisin d-flex align-items-center justify-content-center" style="height: 30vh">
-<button type="button" class="btn cobalt btn-lg text-white">Check out my Github!<a href="https://github.com/NathanDavis97"></a></button>
+  <div class="row justify-content-center">
+    <div class=" col-12 text-white raisin " style="min-height: 30vh">
+      <div class="row justify-content-center mt-5">
+        <h4 class="">Check out my projects on my Github!</h4>
+      </div>
+      <div class="row justify-content-center mt-5 ">
+        <a href="https://github.com/NathanDavis97"><button type="button" class=" btn cobalt btn-lg text-white ">Check out my Github!</button></a>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class=" col text-white raisin d-flex align-items-center justify-content-center" style="height: 30vh">
+  <div class="row ">
+    <div class=" col text-white cobalt d-flex align-items-center justify-content-center" style="min-height: 30vh">
+      <div class="row">
+        <div class="col">
+          <div class="row justify-content-center">
+            <h4 class="text-center">  Connect with me</h4>
+          </div>
+          <div class="row justify-content-between mt-3">
+            <div class="col-10 col-md-4"><a href="mailto:Davislnathan9@gmail.com"><button type="button" class=" btn raisin btn-lg text-white ">Email</button></a></div>
+            <div class="col-10 col-md-4 nopad"><a href="https://www.linkedin.com/in/nathanl-davis/"><button type="button" class=" btn raisin btn-lg text-white ">LinkedIn</button></a></div>
+          </div>
+          
+        </div>
+      </div>
     </div>
   </div>
   </main>
