Fixed a few errors

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class=" col text-white cobalt d-flex align-items-center justify-content-center" style="min-height: 50vh">
       <div class="text-center">
         <h1 class="mt-3 title">Nathan Davis</h1>
+        <h3 class="mt-3 ">Software Developer in Boise Idaho</h3>
       </div>
     </div>
   </div>
@@ -94,11 +95,11 @@
       <div class="row">
         <div class="col">
           <div class="row justify-content-center">
-            <h4 class="text-center">  Connect with me</h4>
+            <h3 class="col-12 text-center pl-2">Connect with me on LinkedIn and through email</h3>
           </div>
-          <div class="row justify-content-between mt-3">
-            <div class="col-10 col-md-4"><a href="mailto:Davislnathan9@gmail.com"><button type="button" class=" btn raisin btn-lg text-white ">Email</button></a></div>
-            <div class="col-10 col-md-4 nopad"><a href="https://www.linkedin.com/in/nathanl-davis/"><button type="button" class=" btn raisin btn-lg text-white ">LinkedIn</button></a></div>
+          <div class="row justify-content-center mt-3">
+            <div class="col text-center"><a href="mailto:Davislnathan9@gmail.com"><button type="button" class=" btn raisin btn-lg text-white ">Email</button></a></div>
+            <div class="col text-center"><a href="https://www.linkedin.com/in/nathanl-davis/"><button type="button" class=" btn raisin btn-lg text-white ">LinkedIn</button></a></div>
           </div>
           
         </div>
